--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f1f1f1;
+    background-color: #3a3a3a;
 }
   
 .layer-wrapper{
