--- a/src/ToolBar.css
+++ b/src/ToolBar.css
@@ -1,12 +1,12 @@
 .ToolBar{
     position: absolute;
+    bottom: 10px;
+    right: 0px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
     z-index: 1;
-    bottom: 10px;
-    right: 0px;
     background-color: black;
     border-radius: 15px;
     margin: 1rem;
@@ -48,4 +48,28 @@
     flex-wrap: wrap;
     gap: 10px;
   }
+  
+/* Add to ToolBar.css */
+.modal {
+    position: absolute;
+    bottom: 50px;
+    right: -180px;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    z-index: 1000;
+    background-color: black;
+    border-radius: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 500;
+}
   
