Implemented color picker feature

--- a/src/ToolBar.css
+++ b/src/ToolBar.css
@@ -51,7 +51,7 @@
   
 /* Add to ToolBar.css */
 .modal {
-    position: absolute;
+    position: fixed;
     bottom: 50px;
     right: -180px;
     transform: translate(-50%, -50%);
