--- a/src/ColorPicker.css
+++ b/src/ColorPicker.css
@@ -1,3 +1,11 @@
+:root {
+    --coolwhite: hsl(228, 56%, 98%);
+    
+    --hue-wildcard: 180;
+    --saturation-wildcard: 50%;
+    --lightness-wildcard: 50%;
+  }
+  
 input[type="range"] {
     width: 100%;
   }
@@ -11,6 +19,130 @@ input[type="range"] {
     border-radius: 15px;
 }
 
-p{
+p, label{
     color: white;
 }
+
+.ColorPicker{
+    position: fixed;
+    right: 1rem;
+    bottom: 12rem;
+    background-color: black;
+    padding: 1rem;
+    border-radius: 15px;
+    width: 20rem;
+}
+
+.color-slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 12px;
+    border-radius: 10px;  
+    outline: none;
+    margin-block: 1rem;
+  }
+
+.color-slider--hue {
+    background: linear-gradient(to right,
+                  hsl(0, 100%, 50%),
+                  hsl(30, 100%, 50%),
+                  hsl(60, 100%, 50%), 
+                  hsl(90, 100%, 50%),
+                  hsl(120, 100%, 50%), 
+                  hsl(150, 100%, 50%), 
+                  hsl(180, 100%, 50%),
+                  hsl(210, 100%, 50%), 
+                  hsl(240, 100%, 50%), 
+                  hsl(270, 100%, 50%),
+                  hsl(300, 100%, 50%),
+                  hsl(330, 100%, 50%), 
+                  hsl(360, 100%, 50%));
+  }
+
+  .color-slider--saturation {
+    background: linear-gradient(to right,
+                  hsl(var(--hue-wildcard), 0%, 50%),
+                  hsl(var(--hue-wildcard), 100%, 50%));
+  }
+  
+  .color-slider--lightness {
+    background: linear-gradient(to right,
+                  hsl(var(--hue-wildcard), 0%, 0%),
+                  hsl(var(--hue-wildcard), 0%, 100%));
+  }
+
+
+.color-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%; 
+    border: 2px solid #ffffff;
+    cursor: pointer;
+    position: relative;
+    background: hsl(0, 0%, 50%);
+  }
+  
+  .color-slider::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid #ffffff;
+    cursor: pointer;
+    background: hsl(0, 0%, 50%);
+  }
+  
+  .color-slider--hue::-webkit-slider-thumb {
+    background: hsl(var(--hue-wildcard), 100%, 50%);
+  }
+  
+  .color-slider--hue::-moz-range-thumb {
+    background: hsl(var(--hue-wildcard), 100%, 50%);
+  }
+  
+  .color-slider--saturation::-webkit-slider-thumb {
+    background: hsl(var(--hue-wildcard), var(--saturation-wildcard), 50%);
+  }
+  
+  .color-slider--saturation::-moz-range-thumb {
+    background: hsl(var(--hue-wildcard), var(--saturation-wildcard), 50%);
+  }
+  
+  .color-slider--lightness::-webkit-slider-thumb {
+    background: hsl(var(--hue-wildcard), 0%, var(--lightness-wildcard));
+  }
+  
+  .color-slider--lightness::-moz-range-thumb {
+    background: hsl(var(--hue-wildcard), 0%, var(--lightness-wildcard));
+  }
+
+  .input_wrapper{
+    display: flex;
+  }
+
+  .input_wrapper input{
+    width: 6rem;
+    border-radius: 10px;
+    border-style: none;
+    background-color: #111213;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+  
+  .input_button{
+    width: 4rem;
+    height: 2rem;
+    background-color: #5AB2FF;
+    color: white;
+    border-radius: 10px;
+    font-size: 0.7rem;
+    padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
